fix: Design in iPhone and dark mode

--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -6,6 +6,10 @@
 	text-align: center;
 	font-size: 24px;
 	margin-bottom: 18px;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: var(--ion-background-color);
+	}
 }
 
 .register-steps {
