--- a/src/app/auth/register/step-contract/step-contract.page.scss
+++ b/src/app/auth/register/step-contract/step-contract.page.scss
@@ -22,4 +22,8 @@ ion-img {
 	padding: 24px;
 	color: var(--ion-color-primary-contrast);
 	text-align: center;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: var(--ion-background-color);
+	}
 }
